Add message in text box

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="col">
             </div>
             <div class="col">
-                <input type="input" id="expression" placeholder="Type Expression here (3*5+2)" class="form-control">
+                <input type="input" id="expression" placeholder="Type Expression here" class="form-control">
                 <button id="calculate" class="btn btn-success">Calculate </button>
 
                 <div id="log">
